# video-streamer

./: pyproject.toml
rust/: Cargo.toml  README.md
rust/src/: main.rs  redis_camera.rs  server.rs  test_camera.rs
video_streamer/core/: camera.py
